# foglamp-south-mqtt-scripted

./: CMakeLists.txt  Description  Jenkinsfile  Package  README.rst  foglamp.version  plugin.cpp  python_script.cpp  scripted.cpp
docs/: index.rst
include/: python_script.h  scripted.h
tests/: CMakeLists.txt  main.cpp  test_info.cpp  test_python.cpp
